[gd_scene load_steps=19 format=3 uid="uid://bp4nu3w7csdxj"]

[ext_resource type="Script" uid="uid://4u5bsxwqja14" path="res://Game/Blueprints/bp_entity/_Entity.gd" id="1_l51lu"]
[ext_resource type="PackedScene" path="res://Blueprints/bp_debug_label/prefabs/bp_debug_speed_label/bp_debug_speed_label.tscn" id="2_8kqbj"]
[ext_resource type="Script" uid="uid://dleyq4np4w7tk" path="res://Game/Blueprints/bp_entity/components/actions/action_move.gd" id="2_abhbh"]
[ext_resource type="PackedScene" path="res://Blueprints/bp_debug_label/prefabs/bp_debug_entity_label/bp_debug_entity_label.tscn" id="2_pwny8"]
[ext_resource type="Script" uid="uid://b6t7sjk66lsaa" path="res://Game/Blueprints/bp_entity/components/actions/action_jump.gd" id="3_jwdik"]
[ext_resource type="PackedScene" path="res://Blueprints/bp_debug_label/prefabs/bp_debug_velocity_label/bp_debug_velocity_label.tscn" id="3_tmlyd"]
[ext_resource type="Script" uid="uid://dmxehp2vdh11l" path="res://Game/Blueprints/bp_entity/components/component_gravity.gd" id="4_5fljv"]
[ext_resource type="PackedScene" path="res://Blueprints/bp_debug_label/prefabs/bp_debug_possessed_label/bp_debug_possessed_label.tscn" id="5_8kqbj"]
[ext_resource type="Script" uid="uid://diiuel8do6laf" path="res://Game/Blueprints/bp_entity/components/triggers/action_trigger_keypress.gd" id="8_5noms"]
[ext_resource type="Script" uid="uid://b8tvhpktlrpx3" path="res://Game/Blueprints/bp_entity/components/triggers/action_trigger_always.gd" id="8_jssfa"]
[ext_resource type="PackedScene" path="res://Blueprints/bp_debug_label/prefabs/bp_debug_authority_label/bp_debug_authority_label.tscn" id="9_5nghq"]
[ext_resource type="Script" uid="uid://bjkigxmt0448t" path="res://Game/Blueprints/bp_entity/components/actions/action_rotate.gd" id="9_5noms"]
[ext_resource type="Script" uid="uid://uu3p4t4j1om8" path="res://Game/Blueprints/bp_entity/components/actions/action_strafe.gd" id="12_nrle3"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_l51lu"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("action_move:SPEED")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("action_jump:JUMP_VELOCITY")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("component_gravity:gravity_scale")
properties/5/spawn = true
properties/5/replication_mode = 2

[sub_resource type="SphereMesh" id="SphereMesh_jssfa"]

[sub_resource type="CylinderMesh" id="CylinderMesh_jssfa"]
top_radius = 0.0
bottom_radius = 0.05
height = 1.11

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l51lu"]
radius = 0.524941
height = 2.04261

[sub_resource type="CapsuleMesh" id="CapsuleMesh_abhbh"]

[node name="bp_entity" type="CharacterBody3D" node_paths=PackedStringArray("camera_pivot", "camera_spring", "camera_transform")]
collision_layer = 512
collision_mask = 513
script = ExtResource("1_l51lu")
camera_pivot = NodePath("camera_pivot")
camera_spring = NodePath("camera_pivot/camera_spring")
camera_transform = NodePath("camera_pivot/camera_spring/camera_transform")
metadata/_custom_type_script = "uid://4u5bsxwqja14"

[node name="synchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_l51lu")

[node name="bp_debug_entity_label" parent="." instance=ExtResource("2_pwny8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.06029, 0)

[node name="bp_debug_velocity_label" parent="." instance=ExtResource("3_tmlyd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.83092, 0)

[node name="bp_debug_speed_label" parent="." instance=ExtResource("2_8kqbj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.63403, 0)

[node name="bp_debug_possessed_label" parent="." instance=ExtResource("5_8kqbj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.36955, 0)

[node name="bp_debug_authority_label" parent="." instance=ExtResource("9_5nghq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.19847, 0)

[node name="debug_ball" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.30583, 1.27837, 0)
mesh = SubResource("SphereMesh_jssfa")

[node name="action_move" type="Node" parent="."]
script = ExtResource("2_abhbh")
metadata/_custom_type_script = "uid://dleyq4np4w7tk"

[node name="action_trigger_always" type="Node" parent="action_move"]
script = ExtResource("8_jssfa")
only_possessed = true
metadata/_custom_type_script = "uid://b8tvhpktlrpx3"

[node name="action_jump" type="Node" parent="."]
script = ExtResource("3_jwdik")
metadata/_custom_type_script = "uid://b6t7sjk66lsaa"

[node name="action_trigger_key_press" type="Node" parent="action_jump"]
script = ExtResource("8_5noms")
action = &"action_jump"
only_possessed = true
metadata/_custom_type_script = "uid://diiuel8do6laf"

[node name="action_rotate" type="Node" parent="."]
script = ExtResource("9_5noms")
metadata/_custom_type_script = "uid://bjkigxmt0448t"

[node name="action_trigger_always" type="Node" parent="action_rotate"]
script = ExtResource("8_jssfa")
metadata/_custom_type_script = "uid://b8tvhpktlrpx3"

[node name="action_strafe" type="Node" parent="."]
script = ExtResource("12_nrle3")
metadata/_custom_type_script = "uid://uu3p4t4j1om8"

[node name="component_gravity" type="Node" parent="."]
script = ExtResource("4_5fljv")
metadata/_custom_type_script = "uid://dmxehp2vdh11l"

[node name="navigation_agent" type="NavigationAgent3D" parent="."]

[node name="camera_pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48546, 0)

[node name="camera_spring" type="SpringArm3D" parent="camera_pivot"]
collision_mask = 0
spring_length = 4.0

[node name="camera_transform" type="Node3D" parent="camera_pivot/camera_spring"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="camera_pivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -6.80294e-08, 1.55633)
mesh = SubResource("CylinderMesh_jssfa")

[node name="collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_l51lu")

[node name="model" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_abhbh")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
